--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Generate image tag
         id: vars
-        run: echo "tag=$(echo '${{ github.ref_name }}' | cut -d- | -f2)" >> $GITHUB_OUTPUT
+        run: echo "tag=$(echo '${{ github.ref_name }}' | cut -d- -f2)" >> $GITHUB_OUTPUT
 
       - name: Generate create date
         id: create
